--- a/web/css/main.css
+++ b/web/css/main.css
@@ -50,6 +50,7 @@ h1 {
 /* Image du plat */
 .plat {
     max-width: 400px;
+    max-height: 400px;
     margin-right: 50px;
 
 }
@@ -86,14 +87,96 @@ h1 {
 }
 
 footer {
-    display: flex;
-    flex-direction: row ;
-    justify-content: center;
-
-
+    text-align:center;
+    bottom:0;
+    width:100%;
+    display:inline-block;
+    vertical-align:top;
 }
 
 footer img {
     max-width: 250px;
-    margin-bottom: 200px;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+}
+
+
+
+@media only screen and (max-width: 1700px) {
+    /* DIV du plat */
+    .container {
+        margin : 50px 150px 50px 150px;
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    /* DIV du plat */
+    .container {
+        margin : 50px 50px 50px 50px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    /* Image du plat */
+    .plat {
+        max-width: 350px;
+        max-height: 350px;
+        margin-right: 30px;
+
+    }
+
+    /* DIV prix, quantité et prix total */
+    .prix-badge {
+        margin-left: 30px;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    /* DIV du plat */
+    .container {
+        flex-direction : row;
+        flex-wrap: wrap;
+        justify-content : center;
+
+    }
+
+    .img-dec
+
+    /* DIV prix, quantité et prix total */
+    .prix-badge {
+        margin-left: 0;
+
+    }
+
+    /* DIV prix et prix total */
+    .prix, .prix-plat {
+        margin: 0;
+    }
+
+    .container div {
+
+    }
 }
