--- a/web/css/login-inscription.css
+++ b/web/css/login-inscription.css
@@ -109,7 +109,6 @@ input {
     0 10px 10px rgba(0,0,0,0.22);
     position: relative;
     overflow: hidden;
-
     max-width: 100%;
     min-height: 600px;
 }
@@ -267,4 +266,38 @@ footer a {
 img {
     max-width: 200px;
     margin-top: 40px;
+}
+
+div.form-responsive {
+    display: none;
+}
+
+@media only screen and (max-width: 1000px) {
+    div.container {
+        border-radius: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+
+    div.form-responsive {
+        display: flex;
+        flex-direction: column;
+        margin: 150px 50px 50px 50px;
+        width: 100%;
+    }
+
+    div.background {
+        display: none;
+    }
+
+    form {
+        margin-bottom: 50px;
+    }
+
+    h1 {
+        margin-bottom: 20px;
+    }
 }
